fix: new score for evaluating gridSearch

--- a/3_models_selection/model_xgboost_with_logs.ipynb
+++ b/3_models_selection/model_xgboost_with_logs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-11T10:45:34.450826Z",
@@ -19,16 +19,17 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "from xgboost import XGBRegressor\n",
     "\n",
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_squared_error, make_scorer\n",
     "from sklearn.metrics import r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +248,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
        "(31715, 50)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-11T10:39:20.523112Z",
@@ -381,29 +382,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/tmp/ipykernel_321752/1438435930.py:19: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_preproc['n_tokens_content'] = np.log(df_preproc['n_tokens_content'])\n",
+      "/var/tmp/ipykernel_321752/1438435930.py:46: FutureWarning: Not prepending group keys to the result index of transform-like apply. In the future, the group keys will be included in the index, regardless of whether the applied function returns a like-indexed object.\n",
+      "To preserve the previous behavior, use\n",
+      "\n",
+      "\t>>> .groupby(..., group_keys=False)\n",
+      "\n",
+      "To adopt the future behavior and silence this warning, use \n",
+      "\n",
+      "\t>>> .groupby(..., group_keys=True)\n",
+      "  df_preproc['num_keywords'] = df.groupby(['data_channel'], sort=False)['num_keywords'].apply(lambda x: x.fillna(x.mean())).reset_index()['num_keywords']\n",
+      "/var/tmp/ipykernel_321752/1438435930.py:46: FutureWarning: Not prepending group keys to the result index of transform-like apply. In the future, the group keys will be included in the index, regardless of whether the applied function returns a like-indexed object.\n",
+      "To preserve the previous behavior, use\n",
+      "\n",
+      "\t>>> .groupby(..., group_keys=False)\n",
+      "\n",
+      "To adopt the future behavior and silence this warning, use \n",
+      "\n",
+      "\t>>> .groupby(..., group_keys=True)\n",
+      "  df_preproc['num_keywords'] = df.groupby(['data_channel'], sort=False)['num_keywords'].apply(lambda x: x.fillna(x.mean())).reset_index()['num_keywords']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(7917, 7917)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "working_df_dev = final_preprocessing(df_dev)\n",
     "df_working_df_eval = final_preprocessing(df_eval, reduce_df=False)\n",
     "(len(df_working_df_eval), len(df_eval))"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## Hyperparameter tuning"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Hyperparameter tuning"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,6 +472,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def RMSE(y_true,y_pred):\n",
+    "    mse = mean_squared_error(y_true, y_pred, squared=False)\n",
+    "    print('MSE: %2.3f' % mse)\n",
+    "    return mse\n",
+    "\n",
+    "def R2(y_true,y_pred):    \n",
+    "     r2 = r2_score(y_true, y_pred)\n",
+    "     adj_r2 = 1-(1-r2)*(len(X_valid) - 1)/(len(X_valid) - X_valid.shape[1] - 1)\n",
+    "     print('R2: %2.3f' % adj_r2)\n",
+    "     return adj_r2\n",
+    "\n",
+    "def two_score(y_true,y_pred):    \n",
+    "    RMSE(y_true,y_pred) #set score here and not below if using MSE in GridCV\n",
+    "    score = R2(y_true,y_pred)\n",
+    "    return score\n",
+    "\n",
+    "def two_scorer():\n",
+    "    return make_scorer(two_score, greater_is_better=False) # change for false if using MSE\n",
+    "\n",
+    "def rmse_scorer():\n",
+    "    return make_scorer(RMSE, greater_is_better=False) # change for false if using MSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gs = GridSearchCV(XGBRegressor(), param_grid=params, cv=5, scoring=RMSE)\n",
+    "gs.fit(X_train, y_train)\n",
+    "print(gs.best_score_)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -451,12 +534,9 @@
     }
    ],
    "source": [
-    "xgbr = XGBRegressor(n_estimators=500, learning_rate=0.01, eval_metric = 'rmsle')\n",
-    "xgb_r = xgbr.fit(X_train, y_train)\n",
-    "pred = xgb_r.predict(X_valid)\n",
-    "rms = mean_squared_error(y_valid, pred, squared=False)\n",
+    "rms = mean_squared_error(y_valid, gs.predict(X_valid), squared=False)\n",
     "print(rms)\n",
-    "r2 = r2_score(y_valid, pred)\n",
+    "r2 = r2_score(y_valid, gs.predict(X_valid))\n",
     "adj_r2 = 1-(1-r2)*(len(X_valid) - 1)/(len(X_valid) - X_valid.shape[1] - 1)\n",
     "print(adj_r2)"
    ]
@@ -601,28 +681,32 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "source": [
-    "## Generate final CSV"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "source": [
+    "## Generate final CSV"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Get the best configuration from the grid search"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# Make final predictions\n",
@@ -635,10 +719,7 @@
     "new_df['Predicted'] = final_preds\n",
     "print(new_df.describe())\n",
     "new_df.to_csv('../output/NAME.csv', columns=['Id','Predicted'], index=False)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
