fix: adjust preprocessing on gradient boosting regressor

--- a/3_models_selection/model_gradientboostingregressor.ipynb
+++ b/3_models_selection/model_gradientboostingregressor.ipynb
@@ -66,11 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-11T10:25:11.214645Z",
-     "start_time": "2023-06-11T10:25:11.208636Z"
+     "end_time": "2023-06-11T11:03:11.414141Z",
+     "start_time": "2023-06-11T11:03:11.402760Z"
     }
    },
    "outputs": [],
@@ -90,7 +90,7 @@
     "    # drop from feature selection\n",
     "    df_preproc.drop(columns=['n_non_stop_words', 'kw_min_min', 'kw_max_max'], inplace=True)\n",
     "    # remove n_tokens_content less than 0\n",
-    "    #df_preproc['n_tokens_content'] = np.log(1 + df_preproc['n_tokens_content'])\n",
+    "    df_preproc['n_tokens_content'] = np.log(1 + df_preproc['n_tokens_content'])\n",
     "\n",
     "    if reduce_df:\n",
     "        # Remove outliers from kw_avg_avg (we lost another 9% of the dataset)\n",
@@ -103,39 +103,39 @@
     "\n",
     "    # adjust num_imgs, num_self_hrefs, num_videos, num_hrefs\n",
     "    df_preproc['num_imgs'].fillna(df_preproc['num_imgs'].mean(), inplace=True)\n",
-    "    #df_preproc['num_imgs'] = np.log(1 + df_preproc['num_imgs'])\n",
+    "    df_preproc['num_imgs'] = np.log(1 + df_preproc['num_imgs'])\n",
     "    df_preproc['num_self_hrefs'].fillna(df_preproc['num_self_hrefs'].mean(), inplace=True)\n",
-    "    #df_preproc['num_self_hrefs'] = np.log(1 + df_preproc['num_self_hrefs'])\n",
+    "    df_preproc['num_self_hrefs'] = np.log(1 + df_preproc['num_self_hrefs'])\n",
     "    df_preproc['num_videos'].fillna(df_preproc['num_videos'].mean(), inplace=True)\n",
-    "    #df_preproc['num_videos'] = np.log(1 + df_preproc['num_videos'])\n",
-    "    #df_preproc['num_hrefs'] = np.log(1 + df_preproc['num_hrefs'])\n",
+    "    df_preproc['num_videos'] = np.log(1 + df_preproc['num_videos'])\n",
+    "    df_preproc['num_hrefs'] = np.log(1 + df_preproc['num_hrefs'])\n",
     "\n",
-    "    '''std_scaler = StandardScaler().fit(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
+    "    std_scaler = StandardScaler().fit(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
     "    scaled_features = std_scaler.transform(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
-    "    df_preproc[['n_tokens_title', 'n_tokens_content']] = scaled_features'''\n",
+    "    df_preproc[['n_tokens_title', 'n_tokens_content']] = scaled_features\n",
     "\n",
     "    df_preproc['avg_negative_polarity'] = df_preproc['avg_negative_polarity'].abs()\n",
     "\n",
     "    # Since this features has a range between [0, 10], we can apply a min max scaling\n",
     "    df_preproc['num_keywords'] = df.groupby(['data_channel'], sort=False)['num_keywords'].apply(lambda x: x.fillna(x.mean())).reset_index()['num_keywords']\n",
-    "    '''std_scaler = MinMaxScaler().fit(df_preproc[['num_keywords']])\n",
+    "    std_scaler = MinMaxScaler().fit(df_preproc[['num_keywords']])\n",
     "    scaled_features = std_scaler.transform(df_preproc[['num_keywords']])\n",
-    "    df_preproc[['num_keywords']] = scaled_features'''\n",
+    "    df_preproc[['num_keywords']] = scaled_features\n",
     "\n",
     "    if 'shares' in df_preproc:\n",
     "        df_preproc['shares'] = np.log(df_preproc['shares'])\n",
     "\n",
-    "    '''std_scaler = StandardScaler().fit(df_preproc[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg', 'kw_max_avg', 'kw_max_min', 'kw_min_max']])\n",
+    "    std_scaler = StandardScaler().fit(df_preproc[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg', 'kw_max_avg', 'kw_max_min', 'kw_min_max']])\n",
     "    scaled_features = std_scaler.transform(df_preproc[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']])\n",
-    "    df_preproc[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']] = scaled_features'''\n",
+    "    df_preproc[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']] = scaled_features\n",
     "\n",
-    "    '''std_scaler = StandardScaler().fit(df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
+    "    std_scaler = StandardScaler().fit(df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
     "    scaled_features = std_scaler.transform(df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
-    "    df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']] = scaled_features'''\n",
+    "    df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']] = scaled_features\n",
     "\n",
-    "    '''std_scaler = StandardScaler().fit(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
+    "    std_scaler = StandardScaler().fit(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
     "    scaled_features = std_scaler.transform(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
-    "    df_preproc[['n_tokens_title', 'n_tokens_content']] = scaled_features'''\n",
+    "    df_preproc[['n_tokens_title', 'n_tokens_content']] = scaled_features\n",
     "\n",
     "    is_weekend = []\n",
     "    for _, row in df_preproc.iterrows():\n",
@@ -145,9 +145,9 @@
     "            is_weekend.append(0)\n",
     "    df_preproc['is_weekend'] = is_weekend\n",
     "\n",
-    "    '''std_scaler = StandardScaler().fit(df_preproc[['timedelta']])\n",
+    "    std_scaler = StandardScaler().fit(df_preproc[['timedelta']])\n",
     "    scaled_features = std_scaler.transform(df_preproc[['timedelta']])\n",
-    "    df_preproc[['timedelta']] = scaled_features'''\n",
+    "    df_preproc[['timedelta']] = scaled_features\n",
     "\n",
     "    return df_preproc"
    ]
