fix: minor fixes in hyperparameter tuning

--- a/3_models_selection/model_xgboost_with_logs.ipynb
+++ b/3_models_selection/model_xgboost_with_logs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-11T10:45:34.450826Z",
@@ -458,22 +458,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = {\n",
-    "    \"n_estimators\": 500,\n",
-    "    \"max_depth\": 4,\n",
-    "    \"min_samples_split\": 5,\n",
-    "    \"learning_rate\": 0.01,\n",
-    "    \"loss\": \"squared_error\",\n",
+    "    \"max_depth\": [4,7,10],\n",
+    "    \"min_child_weight\": [5,7,9],\n",
+    "    \"ETA\": [0.01, 0.025, 0.05],\n",
+    "    \"eval_metric\": ['mae'],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,13 +501,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'GridSearchCV' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb Cell 11\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m gs \u001b[39m=\u001b[39m GridSearchCV(XGBRegressor(), param_grid\u001b[39m=\u001b[39mparams, cv\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m, scoring\u001b[39m=\u001b[39mrmse_scorer)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m gs\u001b[39m.\u001b[39mfit(X_train, y_train)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Blegionlogin.polito.it/home/gesposito/project/predict-shares-online-news/3_models_selection/model_xgboost_with_logs.ipynb#X25sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(gs\u001b[39m.\u001b[39mbest_score_)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'GridSearchCV' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "gs = GridSearchCV(XGBRegressor(), param_grid=params, cv=5, scoring=RMSE)\n",
+    "gs = GridSearchCV(XGBRegressor(), param_grid=params, cv=5, scoring=rmse_scorer)\n",
     "gs.fit(X_train, y_train)\n",
-    "print(gs.best_score_)"
+    "print(gs.best_score_)\n",
+    "print(gs.best_params_)"
    ]
   },
   {
@@ -593,8 +605,8 @@
     }
    ],
    "source": [
-    "feature_names = working_df_dev.drop(columns=[\"shares\"]).columns\n",
-    "sorted(zip(feature_names, xgb_r.feature_importances_), key=lambda x: x[1], reverse=True)"
+    "# feature_names = working_df_dev.drop(columns=[\"shares\"]).columns\n",
+    "# sorted(zip(feature_names, xgb_r.feature_importances_), key=lambda x: x[1], reverse=True)"
    ]
   },
   {
