fix: general bug fixing on hyperparams tuning

--- a/3_models_selection/model_gradientboostingregressor.ipynb
+++ b/3_models_selection/model_gradientboostingregressor.ipynb
@@ -133,10 +133,6 @@
     "    scaled_features = std_scaler.transform(df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
     "    df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']] = scaled_features\n",
     "\n",
-    "    std_scaler = StandardScaler().fit(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
-    "    scaled_features = std_scaler.transform(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
-    "    df_preproc[['n_tokens_title', 'n_tokens_content']] = scaled_features\n",
-    "\n",
     "    is_weekend = []\n",
     "    for _, row in df_preproc.iterrows():\n",
     "        if row['weekday_sunday'] == 1 or row['weekday_saturday'] == 1:\n",
@@ -227,11 +223,12 @@
     "X = working_df_dev.drop(columns=[\"shares\"]).values\n",
     "y = working_df_dev[\"shares\"].values\n",
     "\n",
-    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, shuffle=True, random_state=42)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=.3, shuffle=True, random_state=42)\n",
     "\n",
     "gs = GridSearchCV(GradientBoostingRegressor(), param_grid=params, cv=5, scoring='r2')\n",
     "gs.fit(X_train, y_train)\n",
-    "print(gs.best_score_)"
+    "print(gs.best_score_)\n",
+    "print(gs.best_params_)"
    ],
    "metadata": {
     "collapsed": false,
