--- a/3_models_selection/model_randomforestregressor.ipynb
+++ b/3_models_selection/model_randomforestregressor.ipynb
@@ -67,115 +67,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-11T13:36:17.454410Z",
-     "start_time": "2023-06-11T13:36:17.440886Z"
-    }
-   },
+   "execution_count": 17,
    "outputs": [],
    "source": [
-    "def final_preprocessing(df, reduce_df=True):\n",
-    "    df_preproc = df.copy()\n",
+    "def final_preprocessing_eval(df, dev_stats):\n",
+    "    working_df_dev = df.copy()\n",
     "\n",
-    "    # one hot encoding\n",
     "    enc = OneHotEncoder()\n",
-    "    encoded_df = pd.concat([df_preproc['weekday'], df_preproc['data_channel']], axis=1)\n",
+    "    encoded_df = pd.concat([df['weekday'], df['data_channel']], axis=1)\n",
     "    enc.fit(encoded_df)\n",
     "    encoded_df = enc.transform(encoded_df)\n",
     "    additional_columns = enc.get_feature_names_out()\n",
-    "    df_preproc[additional_columns] = encoded_df.toarray()\n",
-    "    df_preproc.drop(['weekday', 'data_channel', 'url', 'id'], axis = 1, inplace=True)\n",
+    "    working_df_dev[additional_columns] = encoded_df.toarray()\n",
+    "    working_df_dev.drop(['weekday', 'data_channel', 'url', 'id'], axis = 1, inplace=True)\n",
     "\n",
-    "    # drop from feature selection\n",
-    "    df_preproc.drop(columns=['n_non_stop_words', 'kw_min_min', 'kw_max_max'], inplace=True)\n",
-    "    # remove n_tokens_content less than 0\n",
-    "    df_preproc['n_tokens_content'] = np.log(1 + df_preproc['n_tokens_content'])\n",
+    "    for index, row in working_df_dev.iterrows():\n",
+    "        if 'data_channel' in row and not row['num_keywords'] >= 0:\n",
+    "            working_df_dev.at[index, 'num_keywords'] = dev_stats['num_keywords_mean'][row['data_channel']]\n",
     "\n",
-    "    if reduce_df:\n",
-    "        # Remove outliers from kw_avg_avg (we lost another 9% of the dataset)\n",
-    "        q1 = df_preproc['kw_avg_avg'].describe()['25%']\n",
-    "        q3 = df_preproc['kw_avg_avg'].describe()['75%']\n",
-    "        iqr = q3 - q1\n",
-    "        min_kw_avg_avg = q1 - 1.5*iqr\n",
-    "        max_kw_avg_avg = q3 + 1.5*iqr\n",
-    "        df_preproc = df_preproc[(df_preproc.kw_avg_avg < max_kw_avg_avg) & (df_preproc.kw_avg_avg > min_kw_avg_avg)]\n",
+    "    working_df_dev['n_tokens_content'] = np.log(1 + working_df_dev['n_tokens_content'])\n",
     "\n",
-    "    # adjust num_imgs, num_self_hrefs, num_videos, num_hrefs\n",
-    "    df_preproc['num_imgs'].fillna(df_preproc['num_imgs'].mean(), inplace=True)\n",
-    "    df_preproc['num_imgs'] = np.log(1 + df_preproc['num_imgs'])\n",
-    "    df_preproc['num_self_hrefs'].fillna(df_preproc['num_self_hrefs'].mean(), inplace=True)\n",
-    "    df_preproc['num_self_hrefs'] = np.log(1 + df_preproc['num_self_hrefs'])\n",
-    "    df_preproc['num_videos'].fillna(df_preproc['num_videos'].mean(), inplace=True)\n",
-    "    df_preproc['num_videos'] = np.log(1 + df_preproc['num_videos'])\n",
-    "    df_preproc['num_hrefs'] = np.log(1 + df_preproc['num_hrefs'])\n",
+    "    std_scaler = dev_stats['kw_scaler']\n",
+    "    scaled_features = std_scaler.transform(working_df_dev[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']])\n",
+    "    working_df_dev[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']] = scaled_features\n",
     "\n",
-    "    std_scaler = StandardScaler().fit(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
-    "    scaled_features = std_scaler.transform(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
-    "    df_preproc[['n_tokens_title', 'n_tokens_content']] = scaled_features\n",
+    "    std_scaler = dev_stats['ref_scaler']\n",
+    "    scaled_features = std_scaler.transform(working_df_dev[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
+    "    working_df_dev[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']] = scaled_features\n",
     "\n",
-    "    df_preproc['avg_negative_polarity'] = df_preproc['avg_negative_polarity'].abs()\n",
+    "    std_scaler = dev_stats['scaler_details']\n",
+    "    scaled_features = std_scaler.transform(working_df_dev[['n_tokens_title', 'n_tokens_content']])\n",
+    "    working_df_dev[['n_tokens_title', 'n_tokens_content']] = scaled_features\n",
     "\n",
-    "    # Since this features has a range between [0, 10], we can apply a min max scaling\n",
-    "    df_preproc['num_keywords'] = df.groupby(['data_channel'], sort=False)['num_keywords'].apply(lambda x: x.fillna(x.mean())).reset_index()['num_keywords']\n",
-    "    std_scaler = MinMaxScaler().fit(df_preproc[['num_keywords']])\n",
-    "    scaled_features = std_scaler.transform(df_preproc[['num_keywords']])\n",
-    "    df_preproc[['num_keywords']] = scaled_features\n",
+    "    working_df_dev['num_imgs'].fillna(dev_stats['num_imgs_mean'], inplace=True)\n",
+    "    working_df_dev['num_imgs'] = np.log(1 + working_df_dev['num_imgs'])\n",
     "\n",
-    "    if 'shares' in df_preproc:\n",
-    "        df_preproc['shares'] = np.log(df_preproc['shares'])\n",
+    "    working_df_dev['num_self_hrefs'].fillna(dev_stats['num_self_hrefs_mean'], inplace=True)\n",
+    "    working_df_dev['num_self_hrefs'] = np.log(1 + working_df_dev['num_self_hrefs'])\n",
     "\n",
-    "    std_scaler = StandardScaler().fit(df_preproc[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg', 'kw_max_avg', 'kw_max_min', 'kw_min_max']])\n",
-    "    scaled_features = std_scaler.transform(df_preproc[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']])\n",
-    "    df_preproc[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']] = scaled_features\n",
-    "\n",
-    "    std_scaler = StandardScaler().fit(df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
-    "    scaled_features = std_scaler.transform(df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
-    "    df_preproc[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']] = scaled_features\n",
-    "\n",
-    "    std_scaler = StandardScaler().fit(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
-    "    scaled_features = std_scaler.transform(df_preproc[['n_tokens_title', 'n_tokens_content']])\n",
-    "    df_preproc[['n_tokens_title', 'n_tokens_content']] = scaled_features\n",
+    "    working_df_dev['num_videos'].fillna(dev_stats['num_videos_mean'], inplace=True)\n",
+    "    working_df_dev['num_videos'] = np.log(1 + working_df_dev['num_videos'])\n",
     "\n",
     "    is_weekend = []\n",
-    "    for _, row in df_preproc.iterrows():\n",
+    "    for _, row in working_df_dev.iterrows():\n",
     "        if row['weekday_sunday'] == 1 or row['weekday_saturday'] == 1:\n",
     "            is_weekend.append(1)\n",
     "        else:\n",
     "            is_weekend.append(0)\n",
-    "    df_preproc['is_weekend'] = is_weekend\n",
+    "    working_df_dev['is_weekend'] = is_weekend\n",
+    "    working_df_dev.drop(columns=[x for x in additional_columns if x.startswith('weekday')], inplace=True)\n",
     "\n",
-    "    std_scaler = StandardScaler().fit(df_preproc[['timedelta']])\n",
-    "    scaled_features = std_scaler.transform(df_preproc[['timedelta']])\n",
-    "    df_preproc[['timedelta']] = scaled_features\n",
+    "    std_scaler = dev_stats['time_scaler']\n",
+    "    scaled_features = std_scaler.transform(working_df_dev[['timedelta']])\n",
+    "    working_df_dev[['timedelta']] = scaled_features\n",
     "\n",
-    "    return df_preproc"
+    "    return working_df_dev"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-14T22:20:31.307392Z",
+     "start_time": "2023-06-14T22:20:31.297587Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-06-14T22:20:32.322366Z",
+     "start_time": "2023-06-14T22:20:32.309563Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def final_preprocessing_dev(df):\n",
+    "    working_df_dev = df.copy()\n",
+    "    dev_stats = dict()\n",
+    "\n",
+    "    enc = OneHotEncoder()\n",
+    "    encoded_df = pd.concat([df['weekday'], df['data_channel']], axis=1)\n",
+    "    enc.fit(encoded_df)\n",
+    "    encoded_df = enc.transform(encoded_df)\n",
+    "    additional_columns = enc.get_feature_names_out()\n",
+    "    working_df_dev[additional_columns] = encoded_df.toarray()\n",
+    "    working_df_dev.drop(['weekday', 'data_channel', 'url', 'id'], axis = 1, inplace=True)\n",
+    "\n",
+    "    working_df_dev['num_keywords'] = df.groupby(['data_channel'], sort=False)['num_keywords'].apply(lambda x: x.fillna(x.mean())).reset_index()['num_keywords']\n",
+    "    dev_stats['num_keywords_mean'] = df.groupby(['data_channel'], sort=False)['num_keywords'].mean()\n",
+    "\n",
+    "    working_df_dev['n_tokens_content'] = np.log(1 + working_df_dev['n_tokens_content'])\n",
+    "\n",
+    "    working_df_dev['shares'] = np.log(working_df_dev['shares'])\n",
+    "\n",
+    "    # Remove outliers from kw_avg_avg (we lost another 9% of the dataset)\n",
+    "    q1 = working_df_dev['kw_avg_avg'].describe()['25%']\n",
+    "    q3 = working_df_dev['kw_avg_avg'].describe()['75%']\n",
+    "    iqr = q3 - q1\n",
+    "    min_kw_avg_avg = q1 - 1.5*iqr\n",
+    "    max_kw_avg_avg = q3 + 1.5*iqr\n",
+    "    working_df_dev = working_df_dev[(df.kw_avg_avg < max_kw_avg_avg) & (df.kw_avg_avg > min_kw_avg_avg)]\n",
+    "\n",
+    "    std_scaler = StandardScaler().fit(working_df_dev[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg', 'kw_max_avg', 'kw_max_min', 'kw_min_max']])\n",
+    "    scaled_features = std_scaler.transform(working_df_dev[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']])\n",
+    "    working_df_dev[['kw_avg_max', 'kw_avg_avg', 'kw_avg_min', 'kw_min_avg','kw_max_avg', 'kw_max_min', 'kw_min_max']] = scaled_features\n",
+    "    dev_stats['kw_scaler'] = std_scaler\n",
+    "\n",
+    "    std_scaler = StandardScaler().fit(working_df_dev[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
+    "    scaled_features = std_scaler.transform(working_df_dev[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']])\n",
+    "    working_df_dev[['self_reference_min_shares', 'self_reference_max_shares', 'self_reference_avg_sharess']] = scaled_features\n",
+    "    dev_stats['ref_scaler'] = std_scaler\n",
+    "\n",
+    "    std_scaler = StandardScaler().fit(working_df_dev[['n_tokens_title', 'n_tokens_content']])\n",
+    "    scaled_features = std_scaler.transform(working_df_dev[['n_tokens_title', 'n_tokens_content']])\n",
+    "    working_df_dev[['n_tokens_title', 'n_tokens_content']] = scaled_features\n",
+    "    dev_stats['scaler_details'] = std_scaler\n",
+    "\n",
+    "    working_df_dev['num_imgs'].fillna(working_df_dev['num_imgs'].mean(), inplace=True)\n",
+    "    working_df_dev['num_imgs'] = np.log(1 + working_df_dev['num_imgs'])\n",
+    "    dev_stats['num_imgs_mean'] = working_df_dev['num_imgs'].mean()\n",
+    "\n",
+    "    working_df_dev['num_self_hrefs'].fillna(working_df_dev['num_self_hrefs'].mean(), inplace=True)\n",
+    "    working_df_dev['num_self_hrefs'] = np.log(1 + working_df_dev['num_self_hrefs'])\n",
+    "    dev_stats['num_self_hrefs_mean'] = working_df_dev['num_self_hrefs'].mean()\n",
+    "\n",
+    "    working_df_dev['num_videos'].fillna(working_df_dev['num_videos'].mean(), inplace=True)\n",
+    "    working_df_dev['num_videos'] = np.log(1 + working_df_dev['num_videos'])\n",
+    "    dev_stats['num_videos_mean'] = working_df_dev['num_videos'].mean()\n",
+    "\n",
+    "    is_weekend = []\n",
+    "    for _, row in working_df_dev.iterrows():\n",
+    "        if row['weekday_sunday'] == 1 or row['weekday_saturday'] == 1:\n",
+    "            is_weekend.append(1)\n",
+    "        else:\n",
+    "            is_weekend.append(0)\n",
+    "    working_df_dev['is_weekend'] = is_weekend\n",
+    "    working_df_dev.drop(columns=[x for x in additional_columns if x.startswith('weekday')], inplace=True)\n",
+    "\n",
+    "    std_scaler = StandardScaler().fit(working_df_dev[['timedelta']])\n",
+    "    scaled_features = std_scaler.transform(working_df_dev[['timedelta']])\n",
+    "    working_df_dev[['timedelta']] = scaled_features\n",
+    "    dev_stats['time_scaler'] = std_scaler\n",
+    "\n",
+    "    return working_df_dev, dev_stats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "def calcDrop(res):\n",
+    "    # All variables with correlation > cutoff\n",
+    "    all_corr_vars = list(set(res['v1'].tolist() + res['v2'].tolist()))\n",
+    "\n",
+    "    # All unique variables in drop column\n",
+    "    poss_drop = list(set(res['drop'].tolist()))\n",
+    "\n",
+    "    # Keep any variable not in drop column\n",
+    "    keep = list(set(all_corr_vars).difference(set(poss_drop)))\n",
+    "\n",
+    "    # Drop any variables in same row as a keep variable\n",
+    "    p = res[ res['v1'].isin(keep)  | res['v2'].isin(keep) ][['v1', 'v2']]\n",
+    "    q = list(set(p['v1'].tolist() + p['v2'].tolist()))\n",
+    "    drop = (list(set(q).difference(set(keep))))\n",
+    "\n",
+    "    # Remove drop variables from possible drop\n",
+    "    poss_drop = list(set(poss_drop).difference(set(drop)))\n",
+    "\n",
+    "    # subset res dataframe to include possible drop pairs\n",
+    "    m = res[ res['v1'].isin(poss_drop)  | res['v2'].isin(poss_drop) ][['v1', 'v2','drop']]\n",
+    "\n",
+    "    # remove rows that are decided (drop), take set and add to drops\n",
+    "    more_drop = set(list(m[~m['v1'].isin(drop) & ~m['v2'].isin(drop)]['drop']))\n",
+    "    for item in more_drop:\n",
+    "        drop.append(item)\n",
+    "\n",
+    "    return drop\n",
+    "\n",
+    "def corrX_new(df, cut = 0.9):\n",
+    "    # Get correlation matrix and upper triagle\n",
+    "    corr_mtx = df.corr().abs()\n",
+    "    avg_corr = corr_mtx.mean(axis = 1)\n",
+    "    up = corr_mtx.where(np.triu(np.ones(corr_mtx.shape), k=1).astype(np.bool_))\n",
+    "    dropcols = list()\n",
+    "\n",
+    "    res = pd.DataFrame(columns=(['v1', 'v2', 'v1.target',\n",
+    "                                 'v2.target','corr', 'drop' ]))\n",
+    "    for row in range(len(up)-1):\n",
+    "        col_idx = row + 1\n",
+    "        for col in range (col_idx, len(up)):\n",
+    "            if corr_mtx.iloc[row, col] > cut:\n",
+    "                if avg_corr.iloc[row] > avg_corr.iloc[col]:\n",
+    "                    dropcols.append(row)\n",
+    "                    drop = corr_mtx.columns[row]\n",
+    "                else:\n",
+    "                    dropcols.append(col)\n",
+    "                    drop = corr_mtx.columns[col]\n",
+    "\n",
+    "                s = pd.Series([ corr_mtx.index[row],\n",
+    "                                up.columns[col],\n",
+    "                                avg_corr[row],\n",
+    "                                avg_corr[col],\n",
+    "                                up.iloc[row,col],\n",
+    "                                drop],\n",
+    "                              index = res.columns)\n",
+    "\n",
+    "                res.loc[len(res)] = s.to_numpy()\n",
+    "\n",
+    "    dropcols_names = calcDrop(res)\n",
+    "\n",
+    "    return dropcols_names"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-14T22:20:32.937449Z",
+     "start_time": "2023-06-14T22:20:32.914066Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "outputs": [
     {
      "data": {
-      "text/plain": "(7917, 7917)"
+      "text/plain": "(30410, 7917)"
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "working_df_dev = final_preprocessing(df_dev)\n",
-    "df_working_df_eval = final_preprocessing(df_eval, reduce_df=False)\n",
-    "(len(df_working_df_eval), len(df_eval))"
+    "working_df_dev, dev_stats = final_preprocessing_dev(df_dev)\n",
+    "df_working_df_eval = final_preprocessing_eval(df_eval, dev_stats)\n",
+    "\n",
+    "drop_new = corrX_new(working_df_dev, cut = 0.7)\n",
+    "working_df_dev.drop(drop_new, axis=1, inplace=True)\n",
+    "df_working_df_eval.drop(drop_new, axis=1, inplace=True)\n",
+    "(len(working_df_dev), len(df_eval))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-11T13:36:21.095799Z",
-     "start_time": "2023-06-11T13:36:19.370146Z"
+     "end_time": "2023-06-14T22:20:36.146608Z",
+     "start_time": "2023-06-14T22:20:33.426688Z"
     }
    }
   },
@@ -190,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "def RMSE(y_true,y_pred):\n",
@@ -199,11 +338,7 @@
     "    return mse"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-11T13:36:21.797082Z",
-     "start_time": "2023-06-11T13:36:21.784473Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -339,7 +474,6 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "\n",
     "rf = RandomForestRegressor()\n",
     "# Instantiate the grid search model\n",
     "gs = GridSearchCV(estimator = rf, param_grid = param_grid, cv = 3, n_jobs = -1, verbose = 2)\n",
@@ -374,6 +508,26 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X = working_df_dev.drop(columns=[\"shares\"]).values\n",
+    "y = working_df_dev[\"shares\"].values\n",
+    "\n",
+    "best_params = {'bootstrap': False, 'max_depth': 40, 'max_features': 'sqrt', 'min_samples_leaf': 4, 'min_samples_split': 3, 'n_estimators': 1000}\n",
+    "best_model = RandomForestRegressor(**best_params)\n",
+    "best_model.fit(X, y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-06-14T22:21:12.238851Z"
+    }
    }
   },
   {
