fix: small changes

--- a/3_models_selection/mlp_regressor_sklearn.ipynb
+++ b/3_models_selection/mlp_regressor_sklearn.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,9 +541,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 1680 candidates, totalling 8400 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/gesposito/miniconda3/envs/thesis/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:693: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV 1/5] END activation=tanh, alpha=0.001, hidden_layer_sizes=(100, 50, 30), learning_rate=constant, learning_rate_init=0.0001, max_iter=50, solver=sgd;, score=0.025 total time=   6.5s\n"
+     ]
+    }
+   ],
    "source": [
     "gs = GridSearchCV(MLPRegressor(), param_grid=params, cv=5, scoring='r2', verbose=3)\n",
     "gs.fit(X, y)\n",
