fix: added comment to the residual plot

--- a/3_models_selection/plot_generation.ipynb
+++ b/3_models_selection/plot_generation.ipynb
@@ -560,6 +560,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Result from plot\n",
+    "The plot shows that we are underestimating the data, there could be something new that we can do when we pass from the logarithm prediction to the actual value by applying the exponential?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
